--- a/sass/bases/_bases.scss
+++ b/sass/bases/_bases.scss
@@ -42,6 +42,7 @@ h2 {
     white-space: nowrap;
     overflow: hidden;
     width: 282px;
+    font-size: 20px;
   }
   @media screen and (min-width: 780px) {
     width: 800px;
