--- a/sass/utils/_keyframes.scss
+++ b/sass/utils/_keyframes.scss
@@ -36,9 +36,11 @@
 
 @keyframes movein {
     0% {
-        opacity: 0;
+        margin-top: 130px;
+        opacity: 0.2;
     }
     100% {
-        opacity: 1;
+        margin-top: 0;
+        opacity: 1; 
     }
 }
