--- a/sass/pages/_page_autre.scss
+++ b/sass/pages/_page_autre.scss
@@ -68,7 +68,7 @@
     font-weight: lighter;
   }
   @media screen and (min-width: 780px) {
-      width: 3%;
+    width: 3%;
   }
 }
 
@@ -80,7 +80,7 @@
     flex-direction: column;
     align-items: center;
     justify-content: space-around;
-    transition: movein 2s ease-out;
+    animation: movein 3s forwards;
   }
 }
 
@@ -113,6 +113,11 @@
       }
       .check_icon {
         transform: rotate(2turn);
+      }
+      .description {
+        text-overflow: ellipsis;
+        white-space: nowrap;
+        overflow: hidden;
       }
     }
   }
@@ -160,18 +165,6 @@
   @media screen and (min-width: 280px) {
     display: flex;
     justify-content: space-between;
-  }
-}
-
-.description {
-  @media screen and (min-width: 280px) {
-    text-overflow: ellipsis;
-    white-space: nowrap;
-    overflow: hidden;
-    width: 245px;
-  }
-  @media screen and (min-width: 780px) {
-    width: 800px;
   }
 }
 
