--- a/sass/bases/_bases.scss
+++ b/sass/bases/_bases.scss
@@ -33,19 +33,18 @@ section {
   @media screen and (min-width: 280px) {
     width: 100%;
   }
+  @media screen and (min-width: 780px) {
+    width: 33%;
+  }
 }
 
 h2 {
   @media screen and (min-width: 280px) {
     margin: 0;
-    text-overflow: ellipsis;
-    white-space: nowrap;
-    overflow: hidden;
-    width: 282px;
     font-size: 18px;
   }
   @media screen and (min-width: 780px) {
-    width: 800px;
+    width: 360px;
   }
 }
 
