--- a/sass/bases/_bases.scss
+++ b/sass/bases/_bases.scss
@@ -42,9 +42,10 @@ h2 {
   @media screen and (min-width: 280px) {
     margin: 0;
     font-size: 18px;
-  }
-  @media screen and (min-width: 780px) {
-    width: 360px;
+    text-overflow: ellipsis;
+    white-space: nowrap;
+    overflow: hidden;
+    padding: 0 10px;
   }
 }
 
