--- a/sass/pages/_page_acceuil.scss
+++ b/sass/pages/_page_acceuil.scss
@@ -57,9 +57,13 @@
   @media screen and (min-width: 280px) {
     width: 90%;
     height: 300px;
+    position: relative;
     background-color: white;
     border-radius: 20px;
     box-shadow: #d1d1d1 0px 10px 20px 0px;
+  }
+  @media screen and (min-width: 780px) {
+    width: 100%;
   }
 }
 
@@ -74,21 +78,16 @@
 
 .new {
   @media screen and (min-width: 280px) {
-    width: 25%;
-    height: 5%;
+    width: auto;
+    height: 10%;
     position: absolute;
     display: flex;
     justify-content: center;
     align-items: center;
     border-radius: 5px;
-    margin-top: 15px;
-    margin-left: 225px;
+    top: 5%;
+    right: 5%;
     background: $color-third;
-  }
-
-  @media screen and (min-width: 780px) {
-    width: 7%;
-    margin-left: 440px;
   }
 }
 
@@ -112,13 +111,11 @@
 
 .like {
   @media screen and (min-width: 280px) {
-    margin-top: 25px;
-    margin-left: 100px;
     font-size: 30px;
-  }
-
-  @media screen and (min-width: 780px) {
-    margin-left: 340px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 100%;
   }
 }
 
@@ -130,7 +127,7 @@
 
 .heart2 {
   opacity: 0;
-  margin-left: -37px;
+  margin-left: -30px;
   background: linear-gradient(to right, $color-second, $color-first);
   -moz-background-clip: text;
   background-clip: content-box;
