--- a/sass/utils/_mixins.scss
+++ b/sass/utils/_mixins.scss
@@ -1,17 +1,22 @@
 /* Seul et unique bouton */
 
 @mixin button {
-  background: linear-gradient(#ff79da, #9356dc);
-  border-radius: 35px;
-  width: 290px;
-  height: 70px;
-  border: none;
-  box-shadow: #d1d1d1 0px 6px 8px 0px;
-  margin-top: 35px;
-  margin-bottom: 35px;
-  animation: button 3s;
-  &:hover {
-    background: linear-gradient(#fda2e3, #ae76f2);
-    box-shadow: #adacac 0 10px 12px 0;
+  @media screen and (min-width: 280px) {
+    background: linear-gradient(#ff79da, #9356dc);
+    border-radius: 35px;
+    width: 90%;
+    height: 70px;
+    border: none;
+    box-shadow: #d1d1d1 0px 6px 8px 0px;
+    margin-top: 35px;
+    margin-bottom: 35px;
+    animation: button 3s;
+    &:hover {
+      background: linear-gradient(#fda2e3, #ae76f2);
+      box-shadow: #adacac 0 10px 12px 0;
+    }
+  }
+  @media screen and (min-width: 780px) {
+    width: 30%;
   }
 }
