--- a/sass/layout/_header.scss
+++ b/sass/layout/_header.scss
@@ -127,7 +127,8 @@
     align-items: center;
     position: absolute;
     color: white;
-    left: -7%;
+    left: 0;
+    margin-left: -25px;
   }
 }
 
