--- a/css/style.css
+++ b/css/style.css
@@ -213,7 +213,8 @@
     align-items: center;
     position: absolute;
     color: white;
-    left: -7%;
+    left: 0;
+    margin-left: -25px;
   }
 }
 
