--- a/sass/bases/_bases.scss
+++ b/sass/bases/_bases.scss
@@ -2,7 +2,7 @@
 
 @font-face {
   font-family: "Shrikhand";
-  src: url(font/shrikhand/Shrikhand-Regular.ttf) format("truetype");
+  src: url('font/shrikhand/Shrikhand-Regular.ttf') format("truetype");
 }
 
 body {
