--- a/sass/layout/_header.scss
+++ b/sass/layout/_header.scss
@@ -13,6 +13,9 @@
   @media screen and (min-width: 280px) {
     width: 55%;
   }
+  @media screen and (min-width: 780px) {
+    width: 35%;
+  }
 }
 
 #logo_principal {
@@ -155,6 +158,9 @@
     width: 55%;
     margin-left: auto;
     margin-right: auto;
+  }
+  @media screen and (min-width: 780px) {
+    width: 35%;
   }
 }
 
