--- a/sass/utils/_mixins.scss
+++ b/sass/utils/_mixins.scss
@@ -10,10 +10,10 @@
     box-shadow: #d1d1d1 0px 6px 8px 0px;
     margin-top: 35px;
     margin-bottom: 35px;
-    animation: button 3s;
+    
     &:hover {
-      background: linear-gradient(#fda2e3, #ae76f2);
-      box-shadow: #adacac 0 10px 12px 0;
+      filter: brightness(1.4);
+      animation: button 3s;
     }
   }
   @media screen and (min-width: 780px) {
