--- a/sass/bases/_bases.scss
+++ b/sass/bases/_bases.scss
@@ -2,12 +2,13 @@
 
 @font-face {
   font-family: "Shrikhand";
-  src: url('font/shrikhand/Shrikhand-Regular.ttf') format("truetype");
+  src: url("font/shrikhand/Shrikhand-Regular.ttf") format("truetype");
 }
 
 body {
   @media screen and (min-width: 280px) {
     font-family: "Roboto";
+    overflow-x: hidden;
   }
 }
 
