--- a/sass/pages/_page_acceuil.scss
+++ b/sass/pages/_page_acceuil.scss
@@ -88,6 +88,7 @@
     top: 5%;
     right: 5%;
     background: $color-third;
+    padding: 0 10px;
   }
 }
 
@@ -105,7 +106,8 @@
     flex-wrap: wrap;
     justify-content: space-between;
     height: 80px;
-    padding-left: 15px;
+    padding: 0 10px;
+    align-content: space-between;
   }
 }
 
@@ -133,6 +135,7 @@
   background-clip: content-box;
   -webkit-background-clip: text;
   color: transparent;
+  transition: all 400ms ease-in-out;
   &:hover {
     opacity: 1;
   }
