--- a/sass/utils/_mixins.scss
+++ b/sass/utils/_mixins.scss
@@ -4,8 +4,8 @@
   @media screen and (min-width: 280px) {
     background: linear-gradient(#ff79da, #9356dc);
     border-radius: 35px;
-    width: 90%;
-    height: 70px;
+    width: 180px;
+    height: 50px;
     border: none;
     box-shadow: #d1d1d1 0px 6px 8px 0px;
     margin-top: 35px;
@@ -15,8 +15,5 @@
       filter: brightness(1.4);
       animation: button 3s;
     }
-  }
-  @media screen and (min-width: 780px) {
-    width: 30%;
   }
 }
